# api_IA

./: main.py  pyproject.toml  render.yaml  requirements.txt  rumor_engine.py  test.py
